# practicas_curvas-de-rotacion

./: .gitignore  README.md  ajustes_curvas_rotacion_v2.ipynb  ajustes_curvas_rotacion_v3.ipynb  ajustes_curvas_rotacion_v4.ipynb  mcmc.ipynb  pyproject.toml
