[project]
name = "curvas-de-rotacion"
version = "0.1.0"
description = "Paquetes necesarios para el análisis de las curvas de rotacion"
authors = [
    {name = "Alessandro LG",email = "aless.lavagnino@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
